--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,5 @@ cmake_minimum_required(VERSION 3.14)
 
 project(scratch-cpp)
 
-add_subdirectory(coro)
+# add_subdirectory(coro)
+add_subdirectory(asio)
