wintls echo server compiles

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ project(scratch-cpp)
 # add_subdirectory(coro)
 #add_subdirectory(asio)
 #add_subdirectory(io)
-add_subdirectory(winio)
+# add_subdirectory(winio)
+add_subdirectory(wintls)
