rename ssl server

--- a/wintls/CMakeLists.txt
+++ b/wintls/CMakeLists.txt
@@ -23,13 +23,14 @@ if(NOT asio_POPULATED)
   add_subdirectory(${boost-wintls_SOURCE_DIR} ${boost-wintls_BINARY_DIR} EXCLUDE_FROM_ALL)
 endif()
 
-add_executable(echo_server echo_server.cpp)
-target_link_libraries(echo_server PRIVATE boost-wintls)
-target_include_directories(echo_server PRIVATE .)
-target_compile_features(echo_server INTERFACE cxx_std_14)
+set(ECHO_SSL_SERVER echo_ssl_server)
+add_executable(${ECHO_SSL_SERVER} echo_ssl_server.cpp)
+target_link_libraries(${ECHO_SSL_SERVER} PRIVATE boost-wintls)
+target_include_directories(${ECHO_SSL_SERVER} PRIVATE .)
+target_compile_features(${ECHO_SSL_SERVER} INTERFACE cxx_std_14)
 
-
-add_executable(echo_client echo_client.cpp)
-target_link_libraries(echo_client PRIVATE boost-wintls)
-target_include_directories(echo_client PRIVATE .)
-target_compile_features(echo_client INTERFACE cxx_std_14)
+set(ECHO_SSL_CLIENT echo_ssl_client)
+add_executable(${ECHO_SSL_CLIENT} echo_ssl_client.cpp)
+target_link_libraries(${ECHO_SSL_CLIENT} PRIVATE boost-wintls)
+target_include_directories(${ECHO_SSL_CLIENT} PRIVATE .)
+target_compile_features(${ECHO_SSL_CLIENT} INTERFACE cxx_std_14)
