forward echo works

--- a/wintls/CMakeLists.txt
+++ b/wintls/CMakeLists.txt
@@ -34,3 +34,15 @@ add_executable(${ECHO_SSL_CLIENT} echo_ssl_client.cpp)
 target_link_libraries(${ECHO_SSL_CLIENT} PRIVATE boost-wintls)
 target_include_directories(${ECHO_SSL_CLIENT} PRIVATE .)
 target_compile_features(${ECHO_SSL_CLIENT} INTERFACE cxx_std_14)
+
+set(ECHO_CLIENT echo_client)
+add_executable(${ECHO_CLIENT} echo_client.cpp)
+target_link_libraries(${ECHO_CLIENT} PRIVATE boost-wintls)
+target_include_directories(${ECHO_CLIENT} PRIVATE .)
+target_compile_features(${ECHO_CLIENT} INTERFACE cxx_std_14)
+
+set(ECHO_SERVER echo_server)
+add_executable(${ECHO_SERVER} echo_server.cpp)
+target_link_libraries(${ECHO_SERVER} PRIVATE boost-wintls)
+target_include_directories(${ECHO_SERVER} PRIVATE .)
+target_compile_features(${ECHO_SERVER} INTERFACE cxx_std_14)
