--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,6 @@ project(scratch-cpp)
 #add_subdirectory(asio)
 #add_subdirectory(io)
 # add_subdirectory(winio)
-add_subdirectory(wintls)
+#add_subdirectory(wintls)
+
+add_subdirectory(grpc)
