--- a/wintls/CMakeLists.txt
+++ b/wintls/CMakeLists.txt
@@ -23,26 +23,39 @@ if(NOT asio_POPULATED)
   add_subdirectory(${boost-wintls_SOURCE_DIR} ${boost-wintls_BINARY_DIR} EXCLUDE_FROM_ALL)
 endif()
 
-set(ECHO_SSL_SERVER echo_ssl_server)
-add_executable(${ECHO_SSL_SERVER} echo_ssl_server.cpp)
-target_link_libraries(${ECHO_SSL_SERVER} PRIVATE boost-wintls)
-target_include_directories(${ECHO_SSL_SERVER} PRIVATE .)
-target_compile_features(${ECHO_SSL_SERVER} INTERFACE cxx_std_14)
+# set(ECHO_SSL_SERVER echo_ssl_server)
+# add_executable(${ECHO_SSL_SERVER} echo_ssl_server.cpp)
+# target_link_libraries(${ECHO_SSL_SERVER} PRIVATE boost-wintls)
+# target_include_directories(${ECHO_SSL_SERVER} PRIVATE .)
+# target_compile_features(${ECHO_SSL_SERVER} INTERFACE cxx_std_14)
 
-set(ECHO_SSL_CLIENT echo_ssl_client)
-add_executable(${ECHO_SSL_CLIENT} echo_ssl_client.cpp)
-target_link_libraries(${ECHO_SSL_CLIENT} PRIVATE boost-wintls)
-target_include_directories(${ECHO_SSL_CLIENT} PRIVATE .)
-target_compile_features(${ECHO_SSL_CLIENT} INTERFACE cxx_std_14)
+# set(ECHO_SSL_CLIENT echo_ssl_client)
+# add_executable(${ECHO_SSL_CLIENT} echo_ssl_client.cpp)
+# target_link_libraries(${ECHO_SSL_CLIENT} PRIVATE boost-wintls)
+# target_include_directories(${ECHO_SSL_CLIENT} PRIVATE .)
+# target_compile_features(${ECHO_SSL_CLIENT} INTERFACE cxx_std_14)
 
-set(ECHO_CLIENT echo_client)
-add_executable(${ECHO_CLIENT} echo_client.cpp)
-target_link_libraries(${ECHO_CLIENT} PRIVATE boost-wintls)
-target_include_directories(${ECHO_CLIENT} PRIVATE .)
-target_compile_features(${ECHO_CLIENT} INTERFACE cxx_std_14)
+# set(ECHO_CLIENT echo_client)
+# add_executable(${ECHO_CLIENT} echo_client.cpp)
+# target_link_libraries(${ECHO_CLIENT} PRIVATE boost-wintls)
+# target_include_directories(${ECHO_CLIENT} PRIVATE .)
+# target_compile_features(${ECHO_CLIENT} INTERFACE cxx_std_14)
 
-set(ECHO_SERVER echo_server)
-add_executable(${ECHO_SERVER} echo_server.cpp)
-target_link_libraries(${ECHO_SERVER} PRIVATE boost-wintls)
-target_include_directories(${ECHO_SERVER} PRIVATE .)
-target_compile_features(${ECHO_SERVER} INTERFACE cxx_std_14)
+# set(ECHO_SERVER echo_server)
+# add_executable(${ECHO_SERVER} echo_server.cpp)
+# target_link_libraries(${ECHO_SERVER} PRIVATE boost-wintls)
+# target_include_directories(${ECHO_SERVER} PRIVATE .)
+# target_compile_features(${ECHO_SERVER} INTERFACE cxx_std_14)
+
+file(GLOB SOURCES
+*.cpp
+)
+
+# strip file extension
+foreach(test_file ${SOURCES})
+    get_filename_component(test_name ${test_file} NAME_WE)
+    add_executable(${test_name} ${test_file})
+    target_link_libraries(${test_name} PRIVATE boost-wintls )
+    target_include_directories(${test_name} PRIVATE .)
+    target_compile_features(${test_name} INTERFACE cxx_std_14)
+endforeach()
